test/official_tests/field/get_on_class.lox
class Foo {}
Foo.bar; // error: {"line":2,"message":"Only class instances have properties","type":"RuntimeError"}
